fix: index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </header>
   <main>
     <section class="about">
+      <h3>About:</h3>
       <table>
         <tr>
           <td class="info">
             <article>
-            <h3>About:</h3>
             <p>Male, 35 years old, was born on 1984 18 april<br>married, have two children<br>Kazakhstan, Nur-Sultan</p>
           </article>
             <article>
@@ -37,15 +37,15 @@
           </td>
           <td class="pass"></td>
           <td class="foto">
-            <img src="img/foto.jpg" alt="My_foto" width="500px">
+            <img src="img/foto.jpg" alt="My_foto" width="50%">
           </td>
         </tr>
       </table>
       <hr>
     </section>
     <section class="skills">
+      <h3>Summary:</h3>
       <article>
-        <h3>Summary:</h3>
         <p>I want to become a python-developer. So far, I have finished "Interactive Course Python basics" at <a href="https://geekbrains.ru/" target="_blank">geekbrains.ru</a>. And now, I want to learn JS in order to build comfortable and practical user interfaces.</p>
       </article>
       <article>
@@ -108,8 +108,8 @@
       <hr>
     </section>
     <section class="experience">
+      <h3>Experience:</h3>
       <article>
-        <h3>Experience:</h3>
         <ul>
           <li>2017.12 - 2019.10 -> JSC "Sportmaster Kazakhstan" - Deputy Head of Information Technology</li>
           <li>2014.10 - 2017.11 -> JSC "Sportmaster Kazakhstan" - Сhief IT  Administrator</li>
